# winkel

./: pyproject.toml  requirements.txt
example/: actions.py  app.py  db.py  document.py  folder.py  login.py  models.py  register.py  request.py  requirement.txt  requirements.txt  ui.py  views.py
example/templates/: layout.pt
example/templates/slots/: above.pt  menu.pt
example/templates/views/: document.pt  folder.pt  index.cpt
examples/: app.py  requirements.txt  router.py
examples/reha/: app.py  database.db  factories.py  form.py  login.py  models.py  resources.py  store.py  ui.py  views.py
examples/reha/identities/: jwt.priv  jwt.pub
examples/reha/templates/: layout.pt
examples/routing/: actions.py  app.py  db.py  document.py  folder.py  login.py  register.py  request.py  requirements.txt  ui.py  views.py
examples/routing/templates/: layout.pt
examples/traversing/: app.py  factories.py  form.py  models.py  request.py  ui.py  views.py
src/winkel/: __init__.py  app.py  asgi.py  auth.py  contents.py  cors.py  datastructures.py  items.py  markers.py  matchers.py  meta.py  pipeline.py  plugins.py  policies.py  registries.py  registry.py  rendering.py  request.py  resources.py  response.py  router.py  scope.py  scoped.py  service.py  signature.py  sqldb.py  steam.py  templates.py  types.py  ui.py  utils.py
src/winkel/browser/: view.py
src/winkel/components/: __init__.py  actions.py  contents.py  events.py  named.py  router.py  utils.py  versions.py  view.py
src/winkel/database/: __init__.py  meta.py  sql.py
src/winkel/form/: __init__.py
src/winkel/middlewares/: __init__.py  auth.py  security.py  session.py  session.py~  transaction.py  transaction.py~
src/winkel/pipes/: __init__.py  __init__.py~  auth.py  session.py  session.py~  transaction.py  transaction.py~
src/winkel/prototypes/: __init__.py  user.py
src/winkel/registries/: __init__.py  resolver.py
src/winkel/routing/: __init__.py  app.py  plugins.py  router.py
src/winkel/services/: __init__.py  auth.py  flash.py  post.py  resources.py  session.py  sqldb.py  token.py  transaction.py  (+1 more)
tests/: test_actions.py  test_contents.py  test_db.py  test_events.py  test_templates.py  test_versions.py
(+30 files in other folders)
