[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "winkel"
version = "0.1"
authors = [
    {name = "Souheil Chelfouh", email = "sch@treegital.fr"},
]
requires-python = ">=3.10"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "autoroutes",
  "chameleon",
  "fanstatic",
  "frozendict",
  "horseman",
  "orjson",
  "prejudice",
  "rodi",
  "wrapt",
  "itsdangerous",
  "http_session",
  "transaction",
  "vernacular",
  "content-negotiation",
  "autorouting",
  "plum-dispatch"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["winkel"]
namespaces = false
