[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "winkel"
version = "0.1"
authors = [
    {name = "Souheil Chelfouh", email = "sch@treegital.fr"},
]
requires-python = ">=3.10"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "autoroutes",
  "chameleon",
  "frozendict",
  "horseman",
  "orjson",
  "prejudice",
  "rodi",
  "wrapt",
  "itsdangerous",
  "http_session",
  "transaction",
  "vernacular",
  "content-negotiation",
  "autorouting",
  "plum-dispatch",
  "pyhamcrest",
  # following the soon to be excised from the package
  "deform",
  "colander",
  "func_annotator",
  "pyjwt"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["winkel"]
namespaces = false
